# masstin

./: .gitignore  ARTIFACTS.md  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md
.github/workflows/: mac-debug.yml  release.yml  windows-vs2026-smoketest.yml
docs/: custom-parsers.md
examples/: evtx_parse_diag.rs  ewf_diag.rs
memgraph-resources/: style.gss
neo4j-resources/: cypher_queries.md  style.grass
resources/: banner_ascii.txt  gen_banner.py  gen_banner_v2.py
rules/: README.md
rules/firewall/: cisco-asa.yaml  fortinet-fortigate.yaml  palo-alto-traffic.yaml
rules/proxy/: squid.yaml
rules/vpn/: cisco-anyconnect.yaml  fortinet-ssl-vpn.yaml  openvpn.yaml  palo-alto-globalprotect.yaml
src/: banner.rs  filter.rs  lib.rs  load.rs  load_memgraph.rs  load_neo4j.rs  main.rs  merge.rs  merge_memgraph_nodes.rs  merge_neo4j_nodes.rs  parse.rs  parse_carve.rs  parse_cortex.rs  parse_cortex_evtx_forensics.rs  parse_custom.rs  parse_elastic.rs  parse_ese.rs  parse_image_linux.rs  parse_image_windows.rs  parse_journal.rs  parse_linux.rs  parse_mountpoints.rs  parse_tasks.rs  parse_ual.rs  vmdk.rs
src/graph_hunt/: baseline.rs  mod.rs  report.rs  schema.rs
src/graph_hunt/detectors/: betweenness_spike.rs  chain_motif.rs  community_bridge.rs  cred_rotation.rs  mod.rs  novel_edge.rs  pagerank_spike.rs  rare_logon_type.rs
