[package]
name = "masstin"
version = "0.10.0"
edition = "2021"
description = "Lateral movement tracker for anything! A DFIR tool that parses forensic artifacts and visualizes lateral movement in graph databases. Written by Toño Díaz (@jupyterjones)"
authors = ["Tono Diaz (@jupyterj0nes)"]
repository = "https://github.com/jupyterjones/masstin"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
evtx = "0.8.0"
chrono = "0.4.23"
quick-xml = { version = "0.20", features = ["serialize"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
polars = { version = "0.26.1", features = ["lazy", "serde"] }
walkdir = "2.3.2"
neo4rs = "0.6.0"
futures = "0.3.28"
tokio = { version = "1.28", features = ["macros"] }
rpassword = "7.2.0"
csv = "1.2.1"
indicatif = "0.17.3"
console = "0.15"
zip = "0.6"
reqwest = { version = "0.11", features = ["json", "gzip"] }
flate2 = "1.0"
once_cell = "1"
regex = "1"
ewf = "0.2"
ntfs = "0.4"
mbrman = "0.6"
vshadow = "0.2"
libesedb = "0.2"

